--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -91,5 +91,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_location_detail">LocationDetailActivity</string>
     <string name="title_activity_map_view">MapViewActivity</string>
+    <string name="title_activity_map_routing">MapRoutingActivity</string>
 
 </resources>
