--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -92,5 +92,6 @@
     <string name="title_activity_location_detail">LocationDetailActivity</string>
     <string name="title_activity_map_view">MapViewActivity</string>
     <string name="title_activity_map_routing">MapRoutingActivity</string>
+    <string name="title_activity_category">CategoryActivity</string>
 
 </resources>
